# QTournament

./: .gitignore  .travis.yml  BackendAPI.h  BackendAPI_Getters.cpp  BackendAPI_MatchGen.cpp  BackendAPI_NonDatabaseOps.cpp  BracketGenerator.cpp  BracketGenerator.h  BracketMatchData.cpp  BracketMatchData.h  CMakeLists.txt  CSVImporter.cpp  CSVImporter.h  CatMngr.cpp  CatMngr.h  CatRoundStatus.cpp  CatRoundStatus.h  Category.cpp  Category.h  CentralSignalEmitter.cpp  CentralSignalEmitter.h  Court.cpp  Court.h  CourtMngr.cpp  CourtMngr.h  ElimCategory.cpp  ElimCategory.h  ExternalPlayerDB.cpp  ExternalPlayerDB.h  GenericDatabaseObject.cpp  GenericDatabaseObject.h  GenericObjectManager.cpp  GenericObjectManager.h  GroupDef.cpp  GroupDef.h  HelperFunc.cpp  HelperFunc.h  HttpClient.cpp  HttpClient.h  KO_Config.cpp  (+93 more)
AppImage/: Dockerfile_BuildEnv  buildAppImage.sh  buildLibsAndApp.sh  installDockerBuildDeps.sh  qtournament.desktop
doc/: SchweizerLeiter.tex
misc/: 16Bracket_Reference.ods  RankSys32.csv  RankSys32.ods  RankSys32_Vis.ods
models/: CatTableModel.cpp  CatTableModel.h  CourtTabModel.cpp  CourtTabModel.h  MatchGroupTabModel.cpp  MatchGroupTabModel.h  MatchTabModel.cpp  MatchTabModel.h  PlayerTableModel.cpp  PlayerTableModel.h  TeamListModel.cpp  TeamListModel.h  TeamTableModel.cpp  TeamTableModel.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.pro  qt-Release.pro
reports/: AbstractReport.cpp  AbstractReport.h  BracketSheet.cpp  BracketSheet.h  BracketVisData.cpp  BracketVisData.h  InOutList.cpp  InOutList.h  MatchResultList.cpp  MatchResultList.h  MatchResultList_byGroup.cpp  MatchResultList_byGroup.h  MatrixAndStandings.cpp  MatrixAndStandings.h  ParticipantsList.cpp  ParticipantsList.h  ReportFactory.cpp  ReportFactory.h  ResultSheets.cpp  ResultSheets.h  ResultsAndNextMatches.cpp  ResultsAndNextMatches.h  Standings.cpp  Standings.h  SvgBracketSheet.cpp  SvgBracketSheet.h
reports/commonReportElements/: AbstractReportElement.cpp  AbstractReportElement.h  MatchMatrix.cpp  MatchMatrix.h  plotStandings.cpp  plotStandings.h
resources/: tournament.qrc
resources/txt/: consent.html  consent_de.html  match_call.html  match_call_de.html  match_result_confirmation.html  match_result_confirmation_de.html
scripts/: buildAll__Linux.sh  buildAll__Win.sh  buildBasics.sh
server/: CMakeLists.txt  ServerConfig.cpp  ServerConfig.h  TournamentServer.cpp  TournamentServer.h  serverMain.cpp
svgBracketChecker/: CMakeLists.txt  SvgRuleChecks.cpp  SvgRuleChecks.h  main.cpp
tests/: BasicTestClass.cpp  BasicTestClass.h  CMakeLists.txt  DatabaseTestScenario.cpp  DatabaseTestScenario.h  tstBracketGenerator.h  tstCatMngr.cpp  tstCatMngr.h  tstCategory.cpp  tstCategory.h  tstCsvImporter.cpp  tstGenericDBObject.cpp  tstGenericDBObject.h  tstGroupDef.cpp  tstGroupDef.h  tstKOConfig.cpp  tstKOConfig.h  tstMatch.cpp  tstMatch.h  tstMatchMngr.cpp  tstMatchMngr.h  tstPlayer.cpp  tstPlayer.h  tstPlayerMngr.cpp  tstRankingMngr.cpp  tstRankingMngr.h  tstScore.cpp  tstScore.h  tstSwissLadderGenerator.cpp  tstTeam.cpp  tstTeam.h  tstTeamMngr.cpp  tstTeamMngr.h  tstTournament.cpp  unitTestMain.cpp
tests_deprecated/: DatabaseTestScenario.cpp  DatabaseTestScenario.h  tstBracketGenerator.cpp  tstCatMngr.cpp  tstCategory.cpp  tstCategory.h  tstGenericDBObject.cpp  tstGenericDBObject.h  tstKOConfig.cpp  tstKOConfig.h  tstMatch.cpp  tstMatchMngr.cpp  tstPlayerMngr.cpp  tstPlayerMngr.h  tstRankingMngr.cpp  tstRankingMngr.h  tstRoundRobinGenerator.cpp  tstRoundRobinGenerator.h  tstTeam.cpp  tstTeamMngr.cpp  tstTournament.cpp  tstTournament.h  unitTestMain.cpp
ui/: AutoSizingTable.cpp  AutoSizingTable.h  BuiltinTestScenarios.cpp  BuiltinTestScenarios.h  CatTabWidget.cpp  CatTabWidget.h  CatTabWidget.ui  CatTableView.cpp  CatTableView.h  CommonMatchTableWidget.cpp  CommonMatchTableWidget.h  CourtTableView.cpp  CourtTableView.h  CustomMetatypes.cpp  CustomMetatypes.h  DlgBulkImportToExtDb.cpp  DlgBulkImportToExtDb.h  DlgBulkImportToExtDb.ui  DlgConnectionSettings.cpp  DlgConnectionSettings.h  DlgConnectionSettings.ui  DlgImportCSV_Step1.cpp  DlgImportCSV_Step1.h  DlgImportCSV_Step1.ui  DlgImportCSV_Step2.cpp  DlgImportCSV_Step2.h  DlgImportCSV_Step2.ui  DlgImportPlayer.cpp  DlgImportPlayer.h  DlgImportPlayer.ui  DlgMatchResult.cpp  DlgMatchResult.h  DlgMatchResult.ui  DlgPassword.cpp  DlgPassword.h  DlgPassword.ui  DlgPickCategory.cpp  DlgPickCategory.h  DlgPickCategory.ui  DlgPickPlayerSex.cpp  (+90 more)
ui/commonCommands/: AbstractCommand.cpp  AbstractCommand.h  cmdAssignRefereeToMatch.cpp  cmdAssignRefereeToMatch.h  cmdBulkAddPlayerToCat.cpp  cmdBulkAddPlayerToCat.h  cmdBulkRemovePlayersFromCat.cpp  cmdBulkRemovePlayersFromCat.h  cmdCallMatch.cpp  cmdCallMatch.h  cmdConnectionSettings.cpp  cmdConnectionSettings.h  cmdCreateNewPlayerInCat.cpp  cmdCreateNewPlayerInCat.h  cmdCreatePlayerFromDialog.cpp  cmdCreatePlayerFromDialog.h  cmdDeleteFromServer.cpp  cmdDeleteFromServer.h  cmdExportPlayerToExternalDatabase.cpp  cmdExportPlayerToExternalDatabase.h  cmdFullSync.cpp  cmdFullSync.h  cmdImportSinglePlayerFromExternalDatabase.cpp  cmdImportSinglePlayerFromExternalDatabase.h  cmdMoveOrCopyPairToCategory.cpp  cmdMoveOrCopyPairToCategory.h  cmdMoveOrCopyPlayerToCategory.cpp  cmdMoveOrCopyPlayerToCategory.h  cmdOnlineRegistration.cpp  cmdOnlineRegistration.h  cmdRegisterPlayer.cpp  cmdRegisterPlayer.h  cmdRemovePlayerFromCategory.cpp  cmdRemovePlayerFromCategory.h  cmdSetOrChangePassword.cpp  cmdSetOrChangePassword.h  cmdStartOnlineSession.cpp  cmdStartOnlineSession.h  cmdUnlockKeystore.cpp  cmdUnlockKeystore.h  (+2 more)
ui/delegates/: BaseItemDelegate.cpp  BaseItemDelegate.h  CatItemDelegate.cpp  CatItemDelegate.h  CatTabPlayerItemDelegate.cpp  CatTabPlayerItemDelegate.h  CourtItemDelegate.cpp  CourtItemDelegate.h  DelegateItemLED.cpp  DelegateItemLED.h  MatchItemDelegate.cpp  MatchItemDelegate.h  MatchLogItemDelegate.cpp  MatchLogItemDelegate.h  PairItemDelegate.cpp  PairItemDelegate.h  (+6 more)
(+2 files in other folders)
